[DDW-656] Fix AssetToken spacing

--- a/source/renderer/app/components/assets/AssetToken.scss
+++ b/source/renderer/app/components/assets/AssetToken.scss
@@ -1,11 +1,11 @@
 .component {
   display: inline-flex;
+  width: 100%;
 }
 
 .popOverContainer {
   display: inline-flex;
   min-width: 0;
-  width: 100%;
 
   > span {
     min-width: 0;
@@ -105,7 +105,7 @@
     max-height: 48px;
     overflow-y: auto;
     padding-right: 20px;
-    width: calc(100% - 77px);
+    width: calc(100% - 87px);
 
     &::-webkit-scrollbar-button {
       display: none;
